--- a/index.html
+++ b/index.html
@@ -51,21 +51,7 @@
           </div>
         </div>
       </main>
-      <div class="weather-forecast">
-        <div class="row">
-          <div class="col-2">
-            <div class="weather-forecast-date">Thu</div>
-            <img
-              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSCTJhojRWW3ZkD2zVn0U0sTypR6g8MuybvABSfu9Fgr1YjIV7qIavZhK-tJA&s"
-              width="25px"
-            />
-            <div class="weather-forecast-temperatures">
-              <span class="weather-forecast-temperature-max">18</span>
-              <span class="wwetaher-forcast-temperature-min">12</span>
-            </div>
-          </div>
-        </div>
-      </div>
+      <div class="weather-forecast" id="forecast"></div>
 
       <footer>
         This project was coded by
