--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           Github</a
         >
         and hosted on
-        <a href="https://simosezulu.netlify.app/" target="blank">Netlify</a>
+        <a href="https://imaginative-seahorse-e74fdc.netlify.app/" target="blank">Netlify</a>
       </footer>
     </div>
     <script src="src/index.js"></script>
